<resources>
    <string name="app_name">Popular movies</string>

    <string name="poster_text">Poster</string>
    <string name="mark_as_favorite_text">Mark as\n favorite</string>
    <string name="divider_text">divider</string>
    <string name="settings_text">Settings</string>
    <string name="error_text">ERROR</string>

    <string name="rating_text_formatted">%.1f/10</string>
    <string name="by_text_formatted">By %s:</string>

    <string name="pref_title">Order by</string>
    <string name="pref_key">order by</string>

    <string name="pref_order_by_popularity_label">Popularity</string>
    <string name="pref_order_by_top_rated_label">Top-rated</string>
    <string name="pref_order_by_favorites_label">Favorites</string>

    <string name="pref_order_by_popularity_value" translatable="false">popular</string>
    <string name="pref_order_by_top_rated_value" translatable="false">top_rated</string>
    <string name="pref_order_by_favorites_value" translatable="false">favorites</string>
    <string name="trailers_text">Trailers:</string>
    <string name="reviews_text">Reviews:</string>
    <string name="by_text">By</string>
    <string name="unfavorite_text">Unfavorite</string>

</resources>
