<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/activity_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.udacity.popularmovies2.ui.DetailsActivity">

            <ImageView
                android:id="@+id/imageview_detail_poster"
                android:layout_width="150dp"
                android:layout_height="225dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/poster_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_movie_title"
                app:srcCompat="@android:color/black" />

            <TextView
                android:id="@+id/textview_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorPrimaryText"
                android:textSize="32sp"
                android:textStyle="normal|bold"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:text="The Shawshank Redemption" />

            <TextView
                android:id="@+id/textview_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                app:layout_constraintLeft_toRightOf="@+id/imageview_detail_poster"
                app:layout_constraintTop_toBottomOf="@+id/textview_movie_title"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1"
                tools:text="2013-01-04" />

            <TextView
                android:id="@+id/textview_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                app:layout_constraintLeft_toRightOf="@+id/ratingBar"
                app:layout_constraintTop_toTopOf="@+id/ratingBar"
                tools:text="8.1/10" />

            <ToggleButton
                android:id="@+id/button_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:textColor="@color/colorPrimaryText"
                android:textOff="@string/mark_as_favorite_text"
                android:textOn="@string/unfavorite_text"
                app:layout_constraintLeft_toRightOf="@+id/imageview_detail_poster"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

            <TextView
                android:id="@+id/textview_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorPrimaryText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageview_detail_poster"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:text='"Framed in the 1940s for the double murder of his wife and her lover, upstanding banker Andy Dufresne begins a new life at the Shawshank prison, where he puts his accounting skills to work for an amoral warden. During his long stretch in prison, Dufresne comes to be admired by the other inmates -- including an older prisoner named Red -- for his integrity and unquenchable sense of hope."' />

            <ImageView
                android:id="@+id/divider1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/divider_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_overview"
                app:srcCompat="@color/colorDivider"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />


            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:max="10"
                android:numStars="5"
                android:rating="4.05"
                android:stepSize="1"
                app:layout_constraintLeft_toRightOf="@+id/imageview_detail_poster"
                app:layout_constraintTop_toBottomOf="@+id/textview_release_date" />

            <TextView
                android:id="@+id/textview_trailers_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/trailers_text"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="normal|italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1" />


            <LinearLayout
                android:id="@+id/linear_videos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_trailers_text" />

            <ImageView
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/divider_text"
                app:layout_constraintHorizontal_bias="0.46"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_videos"
                app:srcCompat="@color/colorDivider"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <TextView
                android:id="@+id/textview_reviews_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/reviews_text"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="normal|italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <LinearLayout
                android:id="@+id/linear_reviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_reviews_text" />

            <View
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_reviews" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>